--- a/realpage-app/src/app/app.component.html
+++ b/realpage-app/src/app/app.component.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     <blockquote class="blockquote text-center">
-      <p class="mb-0">The ones that are crazy enough to think that they can change the world, are the ones who do.</p>
+      <p class="mb-0">"The ones that are crazy enough to think that they can change the world, are the ones who do."</p>
       <cite title="Steve Jobs">- Steve Jobs</cite>
     </blockquote>
   </div>
